# BleProject

./: README.md  settings.gradle
apk/: app-debug.apk
app/: build.gradle
app/src/androidTest/java/com/biotech/ble/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: sample.txt
app/src/main/java/com/biotech/ble/: DrawActivity.kt  MainActivity.kt
app/src/main/java/com/biotech/ble/data/: ARV.kt  DrawView.kt  (+10 more)
app/src/main/res/layout/: activity_main.xml  layout_draw.xml  log_item.xml  reset_uuid_act.xml  show_log_act.xml  wifi_scan_list_act.xml
app/src/main/res/values/: ids.xml
app/src/test/java/com/biotech/ble/: ExampleUnitTest.kt
blelib/: build.gradle
blelib/src/androidTest/java/com/biotech/blelib/: ExampleInstrumentedTest.kt
blelib/src/main/: AndroidManifest.xml
blelib/src/test/java/com/biotech/blelib/: ExampleUnitTest.kt
commonlib/: build.gradle
commonlib/src/androidTest/java/com/biotech/commonlib/: ExampleInstrumentedTest.kt
commonlib/src/main/: AndroidManifest.xml
commonlib/src/main/java/com/biotech/commonlib/: BaseApplication.kt
commonlib/src/main/res/layout/: item_scan_ble.xml
commonlib/src/test/java/com/biotech/commonlib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
nativelib/src/androidTest/java/com/biotech/nativelib/: ExampleInstrumentedTest.kt
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: CMakeLists.txt  emxAPI.cpp  emxAPI.h  emxutil.cpp  emxutil.h  native-lib.cpp  rtwtypes.h  types.h
nativelib/src/main/cpp/arv_rms/: ARV_RMS.cpp  ARV_RMS.h  ARV_RMS_initialize.cpp  ARV_RMS_initialize.h  ARV_RMS_terminate.cpp  ARV_RMS_terminate.h
nativelib/src/main/cpp/fft/: fft.cpp  fft.h  fft1.cpp  fft1.h  fft_compare.cpp  fft_compare.h  fft_compare_initialize.cpp  fft_compare_initialize.h
nativelib/src/main/cpp/filter_all/: filter.cpp  filter.h  filter_all.cpp  filter_all.h  filter_all_initialize.cpp  filter_all_initialize.h
nativelib/src/main/cpp/mmf/: betaincinv.cpp  betaincinv.h  erfcinv.cpp  erfcinv.h  filloutliers.cpp  filloutliers.h  gammaln.cpp  gammaln.h  locateoutliers.cpp  locateoutliers.h  log.cpp  log.h  median_mean_frequency.cpp  median_mean_frequency.h  median_mean_frequency_emxutil.cpp  median_mean_frequency_emxutil.h  median_mean_frequency_initialize.cpp  median_mean_frequency_initialize.h  median_mean_frequency_rtwutil.cpp  median_mean_frequency_rtwutil.h  median_mean_frequency_terminate.cpp  median_mean_frequency_terminate.h  polyfit.cpp  polyfit.h  sqrt.cpp  sqrt.h  vvarstd.cpp  vvarstd.h  xgeqp3.cpp  xgeqp3.h  xnrm2.cpp  xnrm2.h  xscal.cpp  xscal.h
nativelib/src/main/cpp/rt/: rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h
nativelib/src/main/java/com/biotech/nativelib/: NativeBridge.kt
(+31 files in other folders)
